Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  Zope 2.9.8 (unreleased)

   Bugs fixed

      - Fixed ZClass test breakage due to non-pickleability of
        'zope.interface.Implements' 
        
        N.B.: updated 'zope.interface' package to Zope 3.2 branch;
              should be pinned to a tag or a release before releasing
              2.9.8).

      - Collector #2260: fixed a bug in Examples.zexp

      - Collector #2321: Skip trusted proxies when extracting the client IP
        address from the request.

      - Collector #2318: Allow override of zopectl's control socket in
        zope.conf

      - Collector #2316: correctly unpack DateTimeIndex dates when browsing the
        index.

      - Collector #1866: a 304 HTTP status should not have a content length.
  
      - Collector #2300: delimit *all* HTTP Response headers with CRLF.

  Zope 2.9.7 (2007/03/25)

   Bugs fixed

      - Protected various security mutators with a new postonly decorator.
        The decorator limits method publishing to POST requests only, and
        is a backport from Zope 2.11's requestmethod decorator factory.

      - Collector #2298: webdav.Resource.COPY and webdav.Resource.MOVE did
        not send the expected copy/move events.

      - Collector #2296: Fixed import of ZClass products, broken by removal
        of BBB support for pasting objects whose meta_type info was
        permission-free.

      - Collector #2294: Protected DOS-able ControlPanel methods with the
        same 'requestmethod' wrapper.

      - Collector #2294: Protected various security mutators with a new
        'postonly' decorator.  The decorator limits method publishing to
        POST requests only, and is a backport from Zope 2.11's requestmethod
        decorator factory.

      - Collector #2288: @ and + should not be quoted when forming